Fixes, Additions
Fixed issue data not passing from functional component to class based component(context),

Fixed issue with <TVComponent /> not showing proper episodes.

Fixed issue with movie screen being not centered in the banner.

Added new function in context to handle the season and episode changes in <TVComponent />.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -979,7 +979,7 @@ select {
 .dynamic-banner {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
     backdrop-filter: blur(5px), grayscale(100%);
     width: 100%;
